--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
+<meta name="description" content="Test Video">
+<meta property="og:url" content="https://gofile.io/d/4tg9df">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Test Video">
+<meta property="og:description" content="Test Test">
+<meta property="og:image" content="https://sample-videos.com/img/Sample-jpg-image-100kb.jpg">
 <body>
-    <div class="container">
-        <video onclick="play(event)" src="https://store7.gofile.io/download/8c29aae7-cee4-4fe1-b2d8-a8f2c7d331a6/mov.mp4" id="video"></video>
-        <div class="controls">
-            <button onclick="play(event)"><i class="fa fa-play"></i><i class="fa fa-pause"></i></button>
-            <button onclick="rewind(event)"><i class="fa fa-fast-backward"></i></button>
-            <div class="timeline">
-                <div class="bar">
-                    <div class="inner"></div>
-                </div>
-            </div>
-            <button onclick="forward(event)"><i class="fa fa-fast-forward"></i></button>
-            <button onclick="fullScreen(event)"><i class="fa fa-expand"></i></button>
-            <button onclick="download(event)"><i class="fa fa-cloud-download"></i></button>
-        </div>
-    </div>
-    <script src="js/script.js"></script>
+    <video controls width="*">    
+        <source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
+    
+        Download the
+        or
+        <a href="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4">MP4</a>
+        video.
+    </video>
+    
 </body>
 </html>
