--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta property="og:title" content="Test Video">
 <meta property="og:description" content="Test Test">
 <meta property="og:image" content="https://sample-videos.com/img/Sample-jpg-image-100kb.jpg">
+<meta property="og:video:url" content="ttps://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4">
 <body>
     <video controls width="*">    
         <source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
