--- a/01.html
+++ b/01.html
@@ -5,7 +5,7 @@
 </head>
 
 <meta name="description" content="Test Video">
-<meta property="og:url" content="https://aerodatach.github.io/">
+<meta property="og:url" content="https://aerodatach.github.io/01.html">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Test Video">
 <meta property="og:description" content="Test Test">
