--- a/01.html
+++ b/01.html
@@ -5,7 +5,7 @@
 </head>
 
 <meta property="og:url" content="https://aerodatach.github.io/01.html">
-<meta property="og:type" content="video/mp4">
+<meta property="og:type" content="video.other">
 <meta property="og:title" content="Test Video">
 <meta property="og:description" content="Test">
 <meta property="og:video" content="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" />
