--- a/01.html
+++ b/01.html
@@ -5,12 +5,14 @@
 </head>
 
 <meta property="og:url" content="https://aerodatach.github.io/01.html">
-<meta property="og:type" content="video.other">
+<meta property="og:type" content="article">
 <meta property="og:title" content="Test Video">
-<meta property="og:description" content="Test">
-<meta property="og:video" content="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" />
-<meta property="og:video:secure_url" content="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" />
-<meta property="og:video:type" content="video/mp4" />
+<meta property="og:description" content="Compared more mobile.">
+<meta property="og:video:url" content="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4">
+<meta property="og:video:secure_url" content="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4">
+<meta property="og:video:type" content="application/x-mpegURL">
+<meta property="og:video:width" content="1280">
+<meta property="og:video:height" content="720">
 <meta property="og:image" content="https://download.samplelib.com/jpeg/sample-clouds-400x300.jpg">
 <body>
 Nothing here but OG:
