--- a/09.html
+++ b/09.html
@@ -4,6 +4,7 @@
     <meta property="og:title" content="Test Video" />
     <meta property="og:type" content="video.episode" />
     <meta property="og:description" content="MP4 video asset for Open Graph Cards" />
+    <meta property="og:video:type" content="application/x-mpegURL">
     <meta property="og:image" content="https://download.samplelib.com/jpeg/sample-clouds-400x300.jpg" />
     <meta property="og:video" content="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" />
     <meta property="og:video:url" content="https://aerodatach.github.io/09.html" />
