--- a/10.html
+++ b/10.html
@@ -8,6 +8,7 @@
     <meta property="og:image" content="https://download.samplelib.com/jpeg/sample-clouds-400x300.jpg" />
     <meta property="og:video" content="https://aerodatach.github.io/10.html" />
     <meta property="og:video:url" content="https://aerodatach.github.io/10.html" />
+    <meta property="og:url" content="https://aerodatach.github.io/10.html" />
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
   </head>
