--- a/10.html
+++ b/10.html
@@ -9,6 +9,7 @@
     <meta property="og:video" content="https://aerodatach.github.io/10.html" />
     <meta property="og:video:url" content="https://aerodatach.github.io/10.html" />
     <meta property="og:url" content="https://aerodatach.github.io/10.html" />
+    <meta property="twitter:player" content="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" />
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
   </head>
