--- a/13.html
+++ b/13.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <meta http-equiv="Content-type" content="video/mp4" />
     <meta property="og:title" content="Test Video" />
     <meta property="og:type" content="video.other" />
     <meta property="og:description" content="MP4 video asset for Open Graph Cards" />
@@ -8,7 +9,7 @@
     <meta property="og:video" content="https://gofile.io/d/ySe8vi" />
     <meta property="og:video:url" content="https://gofile.io/d/ySe8vi" />
     <meta property="og:url" content="https://aerodatach.github.io/13.html" />
-    <meta property="twitter:player" content="https://store7.gofile.io/download/295515d7-2304-4b82-a0bb-ecae0c707166/mov.mp4" />
+    <meta property="twitter:player" content="https://v2202303132022222775.nicesrv.de/mov.mp4" />
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
   </head>
@@ -31,7 +32,7 @@
   width="640"
   height="264"
 >
-  <source src="https://store7.gofile.io/download/295515d7-2304-4b82-a0bb-ecae0c707166/mov.mp4" type="video/mp4" />
+  <source src="https://v2202303132022222775.nicesrv.de/mov.mp4" type="video/mp4" />
 
 </video>
 
