/data/html/lszb20230318.html

--- a/vid/lszb20230318.html
+++ b/vid/lszb20230318.html
@@ -7,12 +7,12 @@
     <meta name="keywords" content="aerodatach, aerodata video, aerodata, lszb airport, bern airport, webcam bern airport">
   
 <title>LSZB Bern Airport webcam from 20230318</title>
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="/css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <meta http-equiv="Content-type" content="video/mp4" />
 <meta property="og:title" content="LSZB Bern Airport webcam from 20230318" />
@@ -30,7 +30,7 @@
 <body id="page-top">
     <!-- Navigation-->
         <div class="container">
-            <img src="img/aerodata.jpg" alt="Banner Logo">
+            <img src="/img/aerodata.jpg" alt="Banner Logo">
         </div>
 <section class="page-section" id="video">
             <div class="container">
