--- a/vid/lszb20230318.html
+++ b/vid/lszb20230318.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="AeroData Videos">
     <meta name="keywords" content="aerodatach, aerodata video, aerodata, lszb airport, bern airport, webcam bern airport">
-  
+
 <title>LSZB Bern Airport webcam from 20230318</title>
 <link rel="stylesheet" href="/css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -24,6 +24,9 @@
 <meta property="og:video:url" content="https://v2202303132022222775.nicesrv.de/aero/lszb20230318.mp4" />
 <meta property="og:url" content="https://aerodatach.github.io/vid/lszb20230318.html" />
 <meta property="twitter:player" content="https://v2202303132022222775.nicesrv.de/aero/lszb20230318.mp4" />
+<meta property="twitter:image" content="https://v2202303132022222775.nicesrv.de/aero/lszb20230318.png" />
+<meta property="twitter:player:width" content="800" />
+<meta property="twitter:player:height" content="500" />
 <meta property="og:video:width" content="800">
 <meta property="og:video:height" content="500">
 </head>
@@ -50,8 +53,8 @@
                         poster="https://v2202303132022222775.nicesrv.de/aero/lszb20230318.png"
                         >
                         <source src="https://v2202303132022222775.nicesrv.de/aero/lszb20230318.mp4" type="video/mp4" />
-                        </video></p> 
-                
+                        </video></p>
+
                         </div>
                     </div>
                 </div>
